<resources>
    <string name="app_name" translatable="false">APP NAME</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>

    <string name="travel_type">Travel type</string>
    <string name="one_way_ticket">ONE WAY TICKET</string>
    <string name="two_way_ticket">TWO WAY TICKET</string>

    <string name="one_way_travel">One Way Travel</string>
    <string name="two_way_travel">Two Way Travel</string>

    <string name="premium_class">Premium</string>

    <string name="wait">Please wait ...</string>
    <string name="date_format">Choose the travel date</string>

    <string name="price">Price</string>
    <string name="fcfa" translatable="false">XAF</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main" translatable="false">APP NAME</string>
    <string name="two_way">Two Way</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_validate">VALIDATE</string>
    <string name="btn_home">Home</string>
    <string name="btn_lines">Lines</string>
    <string name="btn_stops">Stops</string>
    <string name="btn_rides">Rides</string>
    <string name="btn_more">More</string>
    <string name="fav_lines_title">Starred lines</string>
    <string name="fav_lines_more">Search more</string>
    <string name="departure_name">Departure name</string>
    <string name="arrival_name">Arrival name</string>
    <string name="line_code">Line code</string>
    <string name="stop_list">Stop list code</string>
    <string name="stops">Stops</string>
    <string name="fav_stops_title">Starred stops</string>
    <string name="fav_stops_more">Search more</string>
    <string name="stop_name">Stop name</string>
    <string name="stop_code">Stop code</string>
    <string name="line_list">Line list code</string>
    <string name="lines">Lines</string>
    <string name="last_rides_title">Latest rides</string>
    <string name="last_rides_more">Search more</string>
    <string name="fav_rides_title">Starred rides</string>
    <string name="fav_rides_more">Search more</string>
    <string name="departure_hour" translatable="false">00:00</string>
    <string name="arrival_hour" translatable="false">00:00</string>
    <string name="ride_date" translatable="false">20-11-21</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="line_name">Line name or code</string>
    <string name="no_line">No line found!</string>
    <string name="search_result_title">Search result title</string>
    <string name="departure_label">Select your departure</string>
    <string name="arrival_label">Select your arrival</string>
    <string name="or">Or</string>
    <string name="line_label">Select your route</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="search_param_title">Search parameters title</string>
    <string name="stop_label">Select your stop or find near from your position</string>
    <string name="no_stop">No stop found!</string>
    <string name="ride_period_label">FIll the ride period for search</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="google_maps_key" translatable="false">AIzaSyDo1_gCsqyN0sul5SsJk-lsJBEVMQLpPF4</string>
    <string name="take_bus">Choose</string>
    <string name="next_bus_waiting_msg">Next bus in about 15 minutes</string>
    <string name="stop_history">Stops history</string>
    <string name="ride_history">Rides history</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="current_pos">Current position</string>
    <string name="next_stop">Next stop</string>
    <string name="ok">Ok</string>
    <string name="select_dep_first">Select the current position first</string>
    <string name="select_arr_first">Select the next stop first</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bus">Bus</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="enter_email">Enter your Email</string>
    <string name="enter_pwd">Enter your Password</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="general">General</string>
    <string name="url">URL</string>
    <string name="url_summary">Fill in the URL to access services</string>
    <string name="wicket_number">Wicket Number</string>
    <string name="wicket_number_summary">Wicket Identification Number</string>
    <string name="language">Language</string>
    <string name="language_summary">Setting of the application language</string>
    <string name="language_default">Default</string>
    <string name="btn_save">Save</string>
    <string name="add_fav_title">Add to favorites</string>
    <string name="add_fav">Add to favorites</string>
    <string name="your_planning">Your Planning</string>
    <string name="period">00:00 - 00:00</string>
</resources>
