<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/component_gray_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stop_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/line_code"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/one_way_travel"
                android:src="@mipmap/dep_dest_grey"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="339dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_departure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_name"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/accent" />

            <TextView
                android:id="@+id/tv_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arrival_name"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>