<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cm.intelso.dev.travelezi.BusLineFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/component_gray_bg"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/one_way_travel"
                        android:src="@mipmap/dep_dest_grey"
                        tools:ignore="ImageContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_line_departure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:text="@string/departure_name" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/tv_line_arrival"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:text="@string/arrival_name" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="12dp"
                    android:text="@string/next_bus_waiting_msg"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btn_choose_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:background="@drawable/btn_bg"
                    android:foregroundGravity="left|center_vertical"
                    android:gravity="center"
                    android:minHeight="35dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/take_bus"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
